--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -7,8 +7,6 @@
         <meta name="description" content="Biovana Sustentable, Cosmetica natural - contactese, horarios de atención lunes a viernes de 9hs a 17hs &#169 BiovanaSustentable2022. Todos los derechos reservados.">
         <meta name="author" content="Diego Escudero"/>
         <meta name="copyright" content="Biovana Sustentable"/>
-        <meta name="robots" content="index"/>
-        <meta name="robots" content="nofollow"/>
         <title>Contacto - Biovana Sustentable </title>
 <!--Bootstrap-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -49,7 +47,7 @@
         <br><br>
         <main class="main-contact"> 
             <form action="" class="card-header main-div p-5 col-sm-9 col-md-9 col-lg-6 col-xl-4">
-                <h3 class="text-center">Contáctese con nosotros</h3>
+                <h3 class="text-center">Contacto</h3>
                 <div>
                     <div class="mb-3 ">
                         <label for="exampleFormControlInput1" class="form-label">Nombre y Apellido</label>
@@ -94,24 +92,23 @@
                     <div class="col-6 col-sm-6 col-md-6 col-lg-4">
                         <p class="h5 text-black mb-3">Links</p>
                         <div class="mb-2">
-                            <a class="text-decoration-none" id="boton" href="../index.html">Home</a>
+                            <a class="text-decoration-none text-black" id="text" href="../index.html">Home</a>
                         </div>
                         <div class="mb-2">
-                            <a class="text-decoration-none" id="boton" href="tienda.html">Tienda</a>
+                            <a class="text-decoration-none text-black" id="text" href="tienda.html">Tienda</a>
                         </div>
                         <div class="mb-2">
-                            <a class="text-decoration-none" id="boton" href="nosotros.html">Nosotras</a>
+                            <a class="text-decoration-none text-black" id="text" href="nosotros.html">Nosotras</a>
                         </div>
                         <div class="mb-2">
-                            <a class="text-decoration-none" id="boton" href="distribuidores.html">Distribuidores</a>
+                            <a class="text-decoration-none text-black" id="text" href="distribuidores.html">Distribuidores</a>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <iframe class="ubicacion" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.534557141162!2d-57.54864128029002!3d-38.03462899908377!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584e106254d7dd3%3A0x756f4ce01c231c91!2sBiovana%20Sustentable!5e0!3m2!1ses!2sar!4v1654704600033!5m2!1ses!2sar" style="border: 0;;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                         </iframe>
                     </div>
-                    <div class="text-black pt-3 text-center">&#169 BiovanaSustentable2022. 
-                        
+                    <div class="text-black pt-3 text-center">&#169 BiovanaSustentable2022. Todos los derechos reservados.
                     </div>  
                 </div>
             </div>
