--- a/pages/distribuidores.html
+++ b/pages/distribuidores.html
@@ -7,8 +7,6 @@
         <meta name="description" content="Biovana Sustentable, Cosmetica natural - distribuidores, venta mayorista y minorista envios a todo el país &#169 BiovanaSustentable2022. Todos los derechos reservados.">
         <meta name="author" content="Diego Escudero"/>
         <meta name="copyright" content="Biovana Sustentable"/>
-        <meta name="robots" content="index"/>
-        <meta name="robots" content="follow"/>
         <title>Distribuidores - Biovana Sustentable</title>
         <!--Bootstrap-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -54,7 +52,7 @@
                 </iframe>
                 <div class="card-body">
                     <h5 class="card-title">Mar Del Plata, Buenos Aires.</h5>
-                    <p class="card-text">Direccion: Ohiggins 378.<br>
+                    <p class="card-text" id="text">Direccion: Ohiggins 378.<br>
                         Telefono: +54 223 5 682906.<br>
                         Horario: Lunes a viernes 9hs a 17hs, Sabados 9hs a 14hs.
                 </p>
@@ -65,7 +63,7 @@
                 </iframe>
                 <div class="card-body">
                     <h5 class="card-title">Buenos Aires, Capital.</h5>
-                    <p class="card-text">Direccion: Ohiggins 378.<br>
+                    <p class="card-text" id="text">Direccion: Ohiggins 378.<br>
                         Telefono: +54 011 5 682906.<br>
                         Horario: Lunes a viernes 8hs a 17hs, Sabados 9hs a 14hs.
                     </p>
@@ -76,7 +74,7 @@
                 </iframe>
                 <div class="card-body">
                     <h5 class="card-title">Bahia Blanca, Buenos Aires.</h5>
-                    <p class="card-text">Direccion: Ohiggins 378.<br>
+                    <p class="card-text" id="text">Direccion: Ohiggins 378.<br>
                         Telefono: +54 291 5 682906.<br>
                         Horario: Lunes a viernes 9hs a 18hs, Sabados 9hs a 14hs.
                     </p>
@@ -106,16 +104,16 @@
                     <div class="col-6 col-sm-6 col-md-6 col-lg-4">
                         <p class="h5 text-black mb-3">Links</p>
                         <div class="mb-2">
-                            <a class="text-decoration-none" id="boton" href="../index.html">Home</a>
+                            <a class="text-decoration-none text-black" id="text" href="../index.html">Home</a>
                         </div>
                         <div class="mb-2">
-                            <a class="text-decoration-none" id="boton" href="tienda.html">Tienda</a>
+                            <a class="text-decoration-none text-black" id="text" href="tienda.html">Tienda</a>
                         </div>
                         <div class="mb-2">
-                            <a class="text-decoration-none" id="boton" href="nosotros.html">Nosotras</a>
+                            <a class="text-decoration-none text-black" id="text" href="nosotros.html">Nosotras</a>
                         </div>
                         <div class="mb-2">
-                            <a class="text-decoration-none" id="boton" href="contactos.html">Contacto</a>
+                            <a class="text-decoration-none text-black" id="text" href="contactos.html">Contacto</a>
                         </div>
                     </div>
                     <div class="col-lg-4">
