--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <meta name="description" content="Biovana Sustentable, Cosmetica natural - venta de productos artesanales para cuidado personal, envios a todo el país ">
     <meta name="author" content="Diego Escudero" />
     <meta name="copyright" content="Biovana Sustentable"/>
-    <meta name="robots" content="index"/>
-    <meta name="robots" content="follow"/>
     <title>Biovana Sustentable</title>
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -62,7 +60,7 @@
           <img src="./assets/img/hero1.webp" class="d-block w-100 h-90" alt="Caja de jabones, oleos ">
         </div>
         <div class="carousel-item">
-          <img src="./assets/img/hero2.webp" class="d-block w-100 h-90" alt="Presentación de oleos en distintos tamaños">
+          <img src="./assets/img/hero5.webp" class="d-block w-100 h-90" alt="Presentación de oleos en distintos tamaños">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -100,7 +98,7 @@
               <img src="./assets/img/produ.webp" class="img-fluid rounded-start" alt="imagen produciendo">
             </div>
             <div class="col-md-12 col-xl-4">
-              <div class="card-body p-4 p-md-3">
+              <div class="card-body p-4">
                 <h5 class="card-title" id="titulo">Proceso de producción</h5>
                 <p class="card-text" id="text">Nuestros productos son 100% naturales, libre del maltrato animal, gluten y parabenos, nuestras materias primas de alta calidad y finamente seleccionados, en constante capacitación y dedicación, las recetas fueron refinadas hasta en contrar el equilibrio deseado. </p>
               </div>
@@ -134,7 +132,7 @@
   <!--fin del main-->
   <!--comienzo aside-->
     <aside class="container-fluid" id="aside">
-      <h2 class="text-center p-3">Nuestra linea de jabones</h2>
+      <h2 class="text-center p-1">Nuestra linea de jabones</h2>
       <div class="row row-cols-2 row-cols-md-4 g-3 text-center " id="aside-items">
         <div class="col col-sm-6  d-flex justify-content-center pt-5 aside-div">
           <div class="card" id="aside-div2">
@@ -206,7 +204,7 @@
             </div>
           </div>
           <div class="col-lg-4">
-            <iframe class="ubicacion p-3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.534557141162!2d-57.54864128029002!3d-38.03462899908377!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584e106254d7dd3%3A0x756f4ce01c231c91!2sBiovana%20Sustentable!5e0!3m2!1ses!2sar!4v1654704600033!5m2!1ses!2sar" style="border: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+            <iframe class="ubicacion" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.534557141162!2d-57.54864128029002!3d-38.03462899908377!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584e106254d7dd3%3A0x756f4ce01c231c91!2sBiovana%20Sustentable!5e0!3m2!1ses!2sar!4v1654704600033!5m2!1ses!2sar" style="border: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
             </iframe>
           </div>
           <div class="text-black pt-4 text-center" id="text">&#169 BiovanaSustentable2022. Todos los derechos reservados.</div>  
