--- a/pages/404.html
+++ b/pages/404.html
@@ -3,24 +3,25 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Biovana Sustentable</title>
-        <meta name="Biovana sustentable" content="cosmetica natural, distribuidores, shampoo solido"/>
-        <meta name="description" content="Biovana Sustentable, Cosmetica natural - Empresa familiar tienda de articulos para el cuidado personal y del medio ambiente &#169 BiovanaSustentable2022. Todos los derechos reservados.">
+        <meta name="Biovana sustentable" content="cosmetica natural, biovana , shampoo solido"/>
+        <meta name="description" content="Biovana Sustentable, Cosmetica natural - contactese, horarios de atención lunes a viernes de 9hs a 17hs &#169 BiovanaSustentable2022. Todos los derechos reservados.">
         <meta name="author" content="Diego Escudero"/>
-        <meta name="copyright" content="About Us - Biovana Sustentable"/>
-        <!--Bootstrap-->
+        <meta name="copyright" content="Biovana Sustentable"/>
+        <title>Contacto - Biovana Sustentable </title>
+        <meta name="robots"  content="index,nofollow" />
+<!--Bootstrap-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-        <!--Mi style-->
+<!--Mi style-->
         <link rel="stylesheet" type="text/css" href="../css/style.css">  
     </head>
-    <body id="body">
+    <body id="body">    
     <!--inicio de nav-->
         <nav class="navbar navbar-expand-lg bg-nav" id="navbar">
             <div class="container-fluid">
-                    <a class="navbar-brand logo" href="../index.html">Biovana Sustentable</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon" ></span>
-                    </button>
+                <a class="navbar-brand logo" href="../index.html">Biovana Sustentable</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon" ></span>
+                </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0" id="botonera">
                         <li class="nav-item">
@@ -43,34 +44,20 @@
             </div>
         </nav>
     <!--fin de nav-->
-    <!--inicio de main-->
-        <br>
-        <main class="container-fluid" id="main-nosotros">
-            <h2 class="text-center">Sobre nosotras!</h2>
-            <section class="container-fluid py-4 col-md-12" id="sec-nosotros">
-                <div class="card mb-3 col-sm-12 col-md-8 col-lg-12 col-xl-12" id="main-section-div" >
-                    <div class="row g-0 " >
-                        <div class="col-md-12 col-lg-12 col-xl-8">
-                            <img src="../assets/img/nosotras.webp" class="img-fluid rounded-start" alt="imagen de nosotras">
-                        </div>
-                        <div class="col-md-12 col-xl-4">
-                            <div class="card-body p-4">
-                            <h5 class="card-title" id="titulo">Nuestro proyecto</h5>
-                            <p class="card-text" id="text">Somos madre e hija creadoras de este emprendimiento sustentable y respetuoso con el medio ambiente. La idea surgió en medio de una pandemia en la cual, buscando un proyecto que nos apasione, comenzamos a ver cuáles eran los productos de la naturaleza más nutritivos para nuestro cuerpo y así poder llevarlo a cada hogar dispuesto a brindar su granito de arena por la tierra.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </main>
-    <!--fin de main-->
+    <!--inicio main-->
+    <main class="container-fluid">
+        <div class="container-fluid">
+            <img src="../assets/img/404.webp" class="homero" alt="error 404, no existe la pagina">
+        </div>
+    </main>
+    <!--fin main-->
     <!--inicio footer-->
         <footer id="footer">
-            <div class="container-fluid d-flex justify-content-evenly mt-5 w-100 p-4">
-                <div class="row p3 text-white">
+            <div class="container-fluid d-flex justify-content-evenly mt-5 w-100 p-3">
+                <div class="row p-3 text-white">
                     <div class="col-6 col-sm-6 col-md-6 col-lg-4">
                         <p class="h5 text-black mb-3">Seguinos</p>
-                        <div class="mb-2 d-inline-block ">
+                        <div class="mb-2 d-inline-block">
                             <a href="https://www.instagram.com/biovanasustentable/"><img src="../assets/icons/instagram.svg" alt="instagram"></a>
                         </div>
                         <div class="mb-2 d-inline-block ">
@@ -92,7 +79,7 @@
                             <a class="text-decoration-none text-black" id="text" href="tienda.html">Tienda</a>
                         </div>
                         <div class="mb-2">
-                            <a class="text-decoration-none text-black" id="text" href="contactos.html">Contacto</a>
+                            <a class="text-decoration-none text-black" id="text" href="nosotros.html">Nosotras</a>
                         </div>
                         <div class="mb-2">
                             <a class="text-decoration-none text-black" id="text" href="distribuidores.html">Distribuidores</a>
@@ -102,11 +89,13 @@
                         <iframe class="ubicacion" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.534557141162!2d-57.54864128029002!3d-38.03462899908377!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584e106254d7dd3%3A0x756f4ce01c231c91!2sBiovana%20Sustentable!5e0!3m2!1ses!2sar!4v1654704600033!5m2!1ses!2sar" style="border: 0;;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                         </iframe>
                     </div>
-                    <div class="text-black pt-4 text-center">&#169 BiovanaSustentable2022. Todos los derechos reservados.</div>  
+                    <div class="text-black pt-3 text-center">&#169 BiovanaSustentable2022. 
+                        
+                    </div>  
                 </div>
             </div>
         </footer>
     <!--fin footer-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     </body>
 </html>
