--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -7,8 +7,6 @@
         <meta name="description" content="Biovana Sustentable, Cosmetica natural - Tienda: jabon artesanal, shampoo y acondicionador solido, cuidado bucal biodegradable &#169 BiovanaSustentable2022. Todos los derechos reservados."/>
         <meta name="author" content="Diego Escudero"/>
         <meta name="copyright" content="Biovana Sustentable"/>
-        <meta name="robots" content="index"/>
-        <meta name="robots" content="follow"/>
         <title>Productos - Biovana Sustentable</title>
         <!--Bootstrap-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -46,77 +44,104 @@
         </nav>
     <!--fin de nav-->
     <!--inicio main-->
-        <main class="conteiner-fluid mb-3">
-            <h2 class="text-center p-5">Jabones naturales</h2>        
+    <main class="conteiner-fluid mb-3">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner box-shadow">
+                <div class="carousel-item active">
+                    <img src="../assets/img/hero4.webp" class="d-block w-100 h-90" alt="imagen de jabones y jaboneras en el bosque">
+                </div>
+                <div class="carousel-item">
+                    <img src="../assets/img/hero2.webp" class="d-block w-100 h-90" alt="Caja de jabones, oleos ">
+                </div>
+                <div class="carousel-item">
+                    <img src="../assets/img/hero3.webp" class="d-block w-100 h-90" alt="Presentación de oleos en distintos tamaños">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+            <h3 class="text-center p-5">Jabones naturales</h3>        
             <div class="d-flex row justify-content-evenly" >
                 <div class="card col-lg-6" id="tienda-div" style="width: 18rem;">
                     <img src="../assets/img/carbon.webp" class="card-img-top" alt="jabon de carbon activado">
                     <div class="card-body">
-                        <h5 class="card-title">Carbon Activado</h5>
-                        <p class="card-text">Limpieza profunda, exfoliante, combate el acné y puntos negros, piel más firme, reductor de poros<br><br> $375</p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                        <h5 class="card-title" id="titulo">Carbon Activado</h5>
+                        <p class="card-text" id="text">Limpieza profunda, exfoliante, combate el acné y puntos negros, piel más firme, reductor de poros<br><br> $375</p>
+                        <a href="../pages/404.html" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
                 <div class="card col-lg-6" id="tienda-div" style="width: 18rem;">
                     <img src="../assets/img/canela.webp" class="card-img-top" alt="jabón de canela">
                     <div class="card-body">
-                        <h5 class="card-title">Canela</h5>
-                        <p class="card-text">Canela y manzanilla, anti-oxidante, anti-inflamatorio, astringente, limpieza profunda, mejora la circulación<br><br>$375</p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                        <h5 class="card-title" id="titulo">Canela</h5>
+                        <p class="card-text" id="text">Canela y manzanilla, anti-oxidante, anti-inflamatorio, astringente, limpieza profunda, mejora la circulación<br><br>$375</p>
+                        <a href="../pages/404.html" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
                 <div class="card col-lg-6" id="tienda-div" style="width: 18rem;">
                     <img src="../assets/img/lavanda.webp" class="card-img-top" alt="jabón de lavanda">
                     <div class="card-body">
-                        <h5 class="card-title">Lavanda</h5>
-                        <p class="card-text">Aromaterapeutico, hidratante, anti-inflamatorio y regenerador, pieles sencibles o dañadas, apto para tatuajes<br><br> $375</p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                        <h5 class="card-title" id="titulo">Lavanda</h5>
+                        <p class="card-text" id="text">Aromaterapeutico, hidratante, anti-inflamatorio y regenerador, pieles sencibles o dañadas, apto para tatuajes<br><br> $375</p>
+                        <a href="../pages/404.html" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
                 <div class="card col-lg-6" id="tienda-div" style="width: 18rem;">
                     <img src="../assets/img/neutro.webp" class="card-img-top" alt="jabón neutro">
                     <div class="card-body">
-                        <h5 class="card-title">Neutro</h5>
-                        <p class="card-text">Hipoalergénico, regula el Ph, apto para tatuajes, limpieza profunda, hidrata y elimina grasa en los poros<br><br>$375</p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                        <h5 class="card-title" id="titulo">Neutro</h5>
+                        <p class="card-text" id="text">Hipoalergénico, regula el Ph, apto para tatuajes, limpieza profunda, hidrata y elimina grasa en los poros<br><br>$375</p>
+                        <a href="../pages/404.html" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
             </div>
-            <h2 class="text-center p-5"> Cuidado Del Cabello</h2>
+            <h3 class="text-center p-5"> Cuidado Del Cabello</h3>
             <div class="d-flex row justify-content-evenly">
                 <div class="card" id="tienda-div" style="width: 18rem;">
                     <img src="../assets/img/shampoo.webp" class="card-img-top" alt="shampoo solido">
                     <div class="card-body">
-                        <h5 class="card-title">Shampoo</h5>
-                        <p class="card-text">Anti-caspa, anti-caída, indicado para pelo graso, hidrata y repara<br><br>$880</p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                        <h5 class="card-title" id="titulo">Shampoo</h5>
+                        <p class="card-text" id="text">Anti-caspa, anti-caída, indicado para pelo graso, hidrata y repara<br><br>$880</p>
+                        <a href="../pages/404.html" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
                 <div class="card" id="tienda-div" style="width: 18rem;">
                     <img src="../assets/img/acondicionador.webp" class="card-img-top" alt="acondicionador solido">
                     <div class="card-body">
-                        <h5 class="card-title">Acondicionador</h5>
-                        <p class="card-text">Pelo seco y dañado, indicado para pelo graso, hidrata y repara<br><br>$880</p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                        <h5 class="card-title" id="titulo">Acondicionador</h5>
+                        <p class="card-text" id="text">Pelo seco y dañado, indicado para pelo graso, hidrata y repara<br><br>$880</p>
+                        <a href="../pages/404.html" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
             </div>
-            <h2 class="text-center p-5">Cuidado Dental</h2>
+            <h3 class="text-center p-5">Cuidado Dental</h3>
             <div class="d-flex row justify-content-evenly">
                 <div class="card" id="tienda-div" style="width: 18rem;">
                 <img src="../assets/img/cepillo.webp" class="card-img-top" alt="cepillos de bamboo de distintos colores">
                     <div class="card-body">
-                        <h5 class="card-title">Cepillo de Bamboo</h5>
+                        <h5 class="card-title" id="titulo">Cepillo de Bamboo</h5>
                         <p class="card-text">El cepillo de bambú es una alternativa que reduce significativamente tu impacto en el medio ambiente<br><br> $400</p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                        <a href="../pages/404.html" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
                 <div class="card" id="tienda-div" style="width: 18rem;">
                     <img src="../assets/img/hilodental.webp" class="card-img-top" alt="hilo dental biodegradable 40mtrs">
                     <div class="card-body">
-                        <h5 class="card-title">Hilo Dental</h5>
+                        <h5 class="card-title" id="titulo">Hilo Dental</h5>
                         <p class="card-text">40 mts, Biodegradable, gusto a menta. Ayuda a blanquear, combate el sarro.<br><br>$450</p>
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                        <a href="../pages/404.html" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
             </div>
@@ -144,20 +169,20 @@
                     <div class="col-6 col-sm-6 col-md-6 col-lg-4">
                         <p class="h5 text-black mb-3">Links</p>
                         <div class="mb-2">
-                            <a class="text-decoration-none" id="boton" href="../index.html">Home</a>
+                            <a class="text-decoration-none text-black" id="text" href="../index.html">Home</a>
                         </div>
                         <div class="mb-2">
-                            <a class="text-decoration-none" id="boton" href="nosotros.html">Nosotras</a>
+                            <a class="text-decoration-none text-black" id="text" href="nosotros.html">Nosotras</a>
                         </div>
                         <div class="mb-2">
-                            <a class="text-decoration-none" id="boton" href="contactos.html">Contacto</a>
+                            <a class="text-decoration-none text-black" id="text" href="contactos.html">Contacto</a>
                         </div>
                         <div class="mb-2">
-                            <a class="text-decoration-none" id="boton" href="distribuidores.html">Distribuidores</a>
+                            <a class="text-decoration-none text-black" id="text" href="distribuidores.html">Distribuidores</a>
                         </div>
                     </div>
                     <div class="col-lg-4">
-                        <iframe class="ubicacion p-3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.534557141162!2d-57.54864128029002!3d-38.03462899908377!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584e106254d7dd3%3A0x756f4ce01c231c91!2sBiovana%20Sustentable!5e0!3m2!1ses!2sar!4v1654704600033!5m2!1ses!2sar" style="border: 0;;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                        <iframe class="ubicacion" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.534557141162!2d-57.54864128029002!3d-38.03462899908377!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584e106254d7dd3%3A0x756f4ce01c231c91!2sBiovana%20Sustentable!5e0!3m2!1ses!2sar!4v1654704600033!5m2!1ses!2sar" style="border: 0;;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                         </iframe>
                     </div>
                     <div class="text-black pt-4 text-center">&#169 BiovanaSustentable2022. Todos los derechos reservados.</div>  
